# SmartOB

./: CMakeLists.txt  README.md
assets/: CMakeLists.txt  test1.stream  test2.stream  test3.stream  test_order_lead.stream  test_snapshot_lead.stream  test_trade_lead.stream  test_trade_lead_trade_in_spread.stream  test_trade_lead_trade_through.stream
include/: .L3OrderBook.h.swp  CMakeLists.txt  IdGen.h  L3OrderBook.h  L3OrderBookListener.h  Order.h  OrderBook.h  SmartOrderBook.h  Strategy.h  Trade.h  common.h  dBuffer.h
src/: CMakeLists.txt  IdGen.cpp  L3OrderBook.cpp  sim.cpp  simOB.cpp  simSOB.cpp  streamGtor.py
tests/: 3  CMakeLists.txt  test_CopyBook.cpp  test_IdGen.cpp  test_L3OrderBook.cpp  test_Order.cpp  test_OrderBook.cpp  test_SmartOB.cpp  test_messages.cpp
